--- a/packages/SystemUI/res/values/cr_colors.xml
+++ b/packages/SystemUI/res/values/cr_colors.xml
@@ -21,4 +21,7 @@
     <!-- Floating action button -->
     <color name="fab_color">@*android:color/accent_device_default_light</color>
     <color name="floating_action_button_icon_color">@android:color/white</color>
+
+    <!-- Custom Carrier Label -->
+    <color name="status_bar_carrier_color">#FFFFFFFF</color>
 </resources>
