pocket: introduce pocket judge
* Judge if device is in pocket.
* Notify clients callbacks when pocked state changes.
* Start listening when device becomes not interactive.
* Stop listening when device becomes interactive and is NOT in pocket.

From: Carlo Savignano <carlosavignano@aospa.co>
Date: Wed, 6 Sep 2017 03:53:16 -0400
Subject: policy: introduce pocket lock

* Block touch screen and keys inputs when device is in pocket.
* Safe-door to disable pocket lock within long press power button
if sensors do not behave correctly after
PocketManager.isDeviceInPocket()
returns true.
* Window uses TYPE_SYSTEM_ERROR flag with ensure high
priority over the lockscreen and other high priority windows.
* Do not illuminate buttons when pocket lock is showing.
* Disable fingerprint events and gestures when in pocket
* Be friendly towards Keypress Boost

Contributors:
Carlo Savignano <carlosavignano@aospa.co>
Chris Lahaye <dev@chrislahaye.com>
Anas Karbila <anaskarbila@aospa.co>
Alex Naidis <alex.naidis@linux.com>
Park Ju Hyung <qkrwngud825@gmail.com>

Ticket: NOUGAT-15

Updated for 8.0 by Sirhc95

From: Alex Naidis <alex.naidis@linux.com>
Date: Mon, 14 Aug 2017 19:51:27 -0400
Subject: PhoneWindowManager: Block screenshots when pocket lock is
 showing

We should prevent accidental screenshots while pocket lock
is showing.

From: Alex Naidis <alex.naidis@linux.com>
Date: Mon, 14 Aug 2017 20:56:16 -0400
Subject: PocketService: Adjust light sensor rate to 400ms

We already adjusted the proximity sensor rate to
400ms, so adjust the rate for the light sensor
accordingly and create a tunable.

From: Chris Lahaye <dev@chrislahaye.com>
Date: Tue, 26 Sep 2017 19:19:19 +0200
Subject: pocket: Add hardware acceleration and properly maintain
 SYSTEM_UI flags

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/cr_strings.xml
+++ b/core/res/res/values/cr_strings.xml
@@ -43,4 +43,7 @@
     <string name="animation_grow_shrink_right">Grow in (Right)</string>
     <string name="animation_random">Random</string>
     <string name="action_null">Blank</string>
+
+    <!-- Pocket Lock -->
+    <string name="pocket_lock_message_long_press">Long press power button to interact</string>
 </resources>
