SystemUI: Remove unnecessary padding around battery icon
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -127,7 +127,7 @@
                 android:singleLine="true"
                 android:paddingStart="@dimen/status_bar_clock_starting_padding"
                 android:paddingEnd="@dimen/status_bar_clock_end_padding"
-                android:gravity="right|center_vertical"
+                android:gravity="center_vertical|start"
                 />
 
             <com.android.systemui.crdroid.logo.LogoImageViewRight
