SystemUI: Update string for add tiles with one click
The QS panel explains how to add/remove tiles, however after
'SystemUI: Allow user to add/remove QS with one click' the
description is wrong. Update the string to suggest both ways.

Change-Id: I2912e9254f9ed14436119addc913fe9907dc7f4e

--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -112,4 +112,7 @@
 
     <!-- Status bar - icons -->
     <string name="status_bar_icons_title">Status bar icons</string>
+
+    <!-- Label for area where tiles can be added to the qs panel -->
+    <string name="drag_or_tap_to_add_tiles">Hold &amp; drag or tap to add tiles</string>
 </resources>
