base: Smart Charging (1/4)
@ZeNiXxX - Bring to Android 10

Signed-off-by: ZeNiXxX <zenixxx.havoc@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/cr_config.xml
+++ b/core/res/res/values/cr_config.xml
@@ -61,4 +61,7 @@
 
     <!-- Whether to use in-built Screen Record service -->
     <bool name="config_showScreenRecord">false</bool>
+
+    <!-- Smart charging battery percentage -->
+    <integer name="config_smartChargingBatteryLevel">80</integer>
 </resources>
