--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -156,6 +156,10 @@
   <java-symbol type="string" name="global_action_screenrecord" />
   <java-symbol type="bool" name="config_showScreenRecord" />
 
-  <!-- Smart charging battery percentage -->
+  <!-- Smart charging -->
   <java-symbol type="integer" name="config_smartChargingBatteryLevel" />
+  <java-symbol type="integer" name="config_smartChargingBatteryResumeLevel" />
+  <java-symbol type="string" name="config_smartChargingSysfsNode" />
+  <java-symbol type="string" name="config_smartChargingSuspendValue" />
+  <java-symbol type="string" name="config_smartChargingResumeValue" />
 </resources>
