--- a/packages/SystemUI/res/layout/keyguard_indication_area_overlay.xml
+++ b/packages/SystemUI/res/layout/keyguard_indication_area_overlay.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/keyguard_indication_area"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/keyguard_indication_margin_bottom"
     android:layout_gravity="bottom|center_horizontal"
     android:orientation="vertical">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/charging_indication"
+            android:layout_width="@dimen/keyguard_charging_indication_width"
+            android:layout_height="@dimen/keyguard_charging_indication_height"
+            android:layout_gravity="center"
+            android:clickable="false"
+            app:lottie_fileName="keyguard_charging_indication.json"
+            app:lottie_loop="true"
+            android:visibility="gone" />
 
   <include layout="@layout/keyguard_indication_text_view" />
 
