--- a/packages/SystemUI/res/values/cr_dimens.xml
+++ b/packages/SystemUI/res/values/cr_dimens.xml
@@ -38,4 +38,8 @@
 
     <!-- Screen recorder -->
     <dimen name="screenrecord_dot_size">48dp</dimen>
+
+    <!-- The width/height of the charging indicator view on keyguard. -->
+    <dimen name="keyguard_charging_indication_height">60dp</dimen>
+    <dimen name="keyguard_charging_indication_width">32dp</dimen>
 </resources>
