--- a/packages/SystemUI/res/values/cr_styles.xml
+++ b/packages/SystemUI/res/values/cr_styles.xml
@@ -30,4 +30,9 @@
         <item name="android:textSize">14dp</item>
         <item name="android:fontFamily">@*android:string/config_bodyFontFamily</item>
     </style>
+
+    <!-- Tri-state UI -->
+    <style name="qs_theme" parent="Theme.SystemUI.QuickSettings">
+        <item name="android:windowIsFloating">true</item>
+    </style>
 </resources>
