--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -150,4 +150,8 @@
   <!-- Light / Regular style fonts -->
   <java-symbol type="string" name="config_lightFontFamily" />
   <java-symbol type="string" name="config_regularFontFamily" />
+
+  <!-- Screen recorder -->
+  <java-symbol type="drawable" name="ic_screenrecord" />
+  <java-symbol type="string" name="global_action_screenrecord" />
 </resources>
