Introduce Samsung like lockscreen clock
* Idea and clock formatting from Alex <du.alexcruz@gmail.com>

Change-Id: I00a6acc1137df76072bb1ab83abd81cb1d8b8228
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -113,4 +113,7 @@
 
     <!-- Binary clock -->
     <string name="clock_title_binary" translatable="false">Binary</string>
+
+    <!-- Samsung clock -->
+    <string name="clock_title_samsung" translatable="false">Samsung</string> 
 </resources>
