--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -157,6 +157,7 @@
   <java-symbol type="bool" name="config_showScreenRecord" />
 
   <!-- Smart charging -->
+  <java-symbol type="bool" name="config_smartChargingAvailable" />
   <java-symbol type="integer" name="config_smartChargingBatteryLevel" />
   <java-symbol type="integer" name="config_smartChargingBatteryResumeLevel" />
   <java-symbol type="string" name="config_smartChargingSysfsNode" />
