--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -110,4 +110,7 @@
     <!-- Screen recorder -->
     <string name="screenrecord_stopdot_label">Show stop dot</string>
     <string name="screenrecord_low_quality_label">Low quality</string>
+
+    <!-- Binary clock -->
+    <string name="clock_title_binary" translatable="false">Binary</string>
 </resources>
