--- a/packages/SystemUI/res/values/cr_styles.xml
+++ b/packages/SystemUI/res/values/cr_styles.xml
@@ -24,4 +24,10 @@
         <item name="android:layout_centerVertical">true</item>
         <item name="android:alpha">@null</item>
     </style>
+
+    <!-- reTicker -->
+    <style name="TextAppearance.Notifications.reTicker" parent="@*android:style/TextAppearance.StatusBar.Icon">
+        <item name="android:textSize">14dp</item>
+        <item name="android:fontFamily">@*android:string/config_bodyFontFamily</item>
+    </style>
 </resources>
