New Crowdin updates (#591)
* New translations cr_strings.xml (Santali)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Arabic)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Bulgarian)

* New translations cr_strings.xml (Catalan)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Finnish)

* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Japanese)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Kurdish)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (Polish)

* New translations cr_strings.xml (Portuguese)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Slovak)

* New translations cr_strings.xml (Turkish)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (Romanian)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Vietnamese)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Persian)

* New translations cr_strings.xml (Estonian)

* New translations cr_strings.xml (Azerbaijani)

* New translations cr_strings.xml (Chinese Simplified)

* New translations cr_strings.xml (Santali)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Vietnamese)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (Ukrainia

--- a/packages/SystemUI/res/values-cs-rCZ/cr_strings.xml
+++ b/packages/SystemUI/res/values-cs-rCZ/cr_strings.xml
@@ -197,4 +197,7 @@
     <string name="tristate_rotation_0">Na výšku</string>
     <string name="tristate_rotation_90">Na šířku (90°)</string>
     <string name="tristate_rotation_270">Na šířku (270°)</string>
+    <!-- Screenrecorder -->
+    <string name="screenrecord_stopdot_label">Zobrazit tečku pro zastavení nahrávání\nDlouhým stiskem ji přesunete</string>
+    <string name="screenrecord_lowquality_label">Nižší kvalita pro zajištění menší velikosti souboru</string>
 </resources>
