--- a/packages/SystemUI/res/values-nl-rNL/cr_strings.xml
+++ b/packages/SystemUI/res/values-nl-rNL/cr_strings.xml
@@ -195,4 +195,7 @@
     <string name="tristate_rotation_0">Staand</string>
     <string name="tristate_rotation_90">Liggend (90°)</string>
     <string name="tristate_rotation_270">Liggend (270°)</string>
+    <!-- Screenrecorder -->
+    <string name="screenrecord_stopdot_label">Toon stop punt\nLang indrukken om te verplaatsen</string>
+    <string name="screenrecord_lowquality_label">Lagere kwaliteit voor kleinere bestandsgrootte</string>
 </resources>
