--- a/packages/SystemUI/res/values-ru-rRU/cr_strings.xml
+++ b/packages/SystemUI/res/values-ru-rRU/cr_strings.xml
@@ -185,11 +185,11 @@
     <string name="screenrecord_delete_description">Запись экрана удалена</string>
     <!-- Alert slide extras -->
     <string name="volume_ringer_priority_only">Приоритет</string>
-    <string name="volume_ringer_alarms_only">Alarms</string>
-    <string name="volume_ringer_dnd">DnD</string>
-    <string name="tristate_flashlight_on">Torch on</string>
-    <string name="tristate_flashlight_off">Torch off</string>
-    <string name="tristate_flashlight_blink">Torch blink</string>
+    <string name="volume_ringer_alarms_only">Будильник</string>
+    <string name="volume_ringer_dnd">Не беспокоить</string>
+    <string name="tristate_flashlight_on">Фонарик включен</string>
+    <string name="tristate_flashlight_off">Фонарик выключен</string>
+    <string name="tristate_flashlight_blink">Мигание фонарика</string>
     <string name="tristate_brightness_bright">Максимальная яркость</string>
     <string name="tristate_brightness_dark">Минимальная яркость</string>
     <string name="tristate_brightness_auto">Автоматическая яркость</string>
@@ -197,4 +197,7 @@
     <string name="tristate_rotation_0">Портрет</string>
     <string name="tristate_rotation_90">Ландшафт (90°)</string>
     <string name="tristate_rotation_270">Ландшафт (270°)</string>
+    <!-- Screenrecorder -->
+    <string name="screenrecord_stopdot_label">Показывать кнопку остановки\nУдерживайте для перемещения</string>
+    <string name="screenrecord_lowquality_label">Низкое качество для меньшего размера файла</string>
 </resources>
