--- a/packages/SystemUI/res/values-sat-rIN/cr_strings.xml
+++ b/packages/SystemUI/res/values-sat-rIN/cr_strings.xml
@@ -182,17 +182,20 @@
     <!-- A toast message shown after successfully deleting a screen recording [CHAR LIMIT=NONE] -->
     <string name="screenrecord_delete_description">ᱥᱠᱨᱤᱱ ᱨᱮᱠᱚᱰᱤᱝ ᱢᱮᱴᱟᱣ ᱮᱱᱟ</string>
     <!-- Alert slide extras -->
-    <string name="volume_ringer_priority_only">Priority</string>
-    <string name="volume_ringer_alarms_only">Alarms</string>
+    <string name="volume_ringer_priority_only">ᱯᱨᱟᱭᱚᱨᱤᱴᱭ</string>
+    <string name="volume_ringer_alarms_only">ᱟᱠᱟᱨᱟᱢᱠᱚ</string>
     <string name="volume_ringer_dnd">DnD</string>
-    <string name="tristate_flashlight_on">Torch on</string>
-    <string name="tristate_flashlight_off">Torch off</string>
-    <string name="tristate_flashlight_blink">Torch blink</string>
-    <string name="tristate_brightness_bright">Max-brightness</string>
-    <string name="tristate_brightness_dark">Min-brightness</string>
-    <string name="tristate_brightness_auto">Auto-brightness</string>
-    <string name="tristate_rotation_auto">Auto-rotate</string>
-    <string name="tristate_rotation_0">Portrait</string>
-    <string name="tristate_rotation_90">Landscape (90°)</string>
-    <string name="tristate_rotation_270">Landscape (270°)</string>
+    <string name="tristate_flashlight_on">ᱴᱚᱨᱪ ᱮᱢ ᱪᱷᱚ</string>
+    <string name="tristate_flashlight_off">ᱴᱚᱨᱪ ᱵᱚᱸᱫ</string>
+    <string name="tristate_flashlight_blink">ᱴᱚᱨᱪ ᱡᱤᱲᱤᱵ</string>
+    <string name="tristate_brightness_bright">ᱡᱟᱹᱥᱼᱡᱷᱟᱞᱠᱟᱣᱠᱚ</string>
+    <string name="tristate_brightness_dark">ᱢᱤᱱᱼᱡᱷᱟᱞᱠᱟᱣᱠᱚ</string>
+    <string name="tristate_brightness_auto">ᱟᱡᱼᱛᱮᱡᱷᱟᱞᱠᱟᱣ</string>
+    <string name="tristate_rotation_auto">ᱟᱡ ᱛᱮ ᱟᱹᱪᱩᱨ</string>
+    <string name="tristate_rotation_0">ᱯᱚᱴᱨᱮᱴ</string>
+    <string name="tristate_rotation_90">ᱞᱮᱸᱰᱥᱠᱮᱯ (᱙᱐°)</string>
+    <string name="tristate_rotation_270">ᱞᱮᱸᱰᱥᱠᱮᱯ (᱒᱗᱐°)</string>
+    <!-- Screenrecorder -->
+    <string name="screenrecord_stopdot_label">ᱵᱚᱸᱫᱽ ᱰᱚᱴ ᱫᱮᱠᱷᱟᱣ\nᱩᱪᱟᱹᱲ ᱞᱟᱹᱜᱤᱫᱹᱽ ᱡᱩᱨ ᱚᱛᱟᱭ ᱢᱮ</string>
+    <string name="screenrecord_lowquality_label">ᱠᱟᱹᱴᱤᱡ ᱨᱮᱫ ᱢᱟᱯ ᱞᱟᱹᱜᱤᱫ ᱠᱚᱢ ᱠᱣᱟᱞᱤᱴᱭ</string>
 </resources>
