--- a/packages/SystemUI/res/values-uk-rUA/cr_strings.xml
+++ b/packages/SystemUI/res/values-uk-rUA/cr_strings.xml
@@ -234,4 +234,7 @@
     <string name="tristate_rotation_0">Портретна</string>
     <string name="tristate_rotation_90">Ландшафт (90°)</string>
     <string name="tristate_rotation_270">Ландшафт (270°)</string>
+    <!-- Screenrecorder -->
+    <string name="screenrecord_stopdot_label">Показувати крапку припинення\nТривало натисніть її, щоб перемістити</string>
+    <string name="screenrecord_lowquality_label">Зменшити якість для зменшення розміру файлу</string>
 </resources>
