--- a/packages/SystemUI/res/values-vi-rVN/cr_strings.xml
+++ b/packages/SystemUI/res/values-vi-rVN/cr_strings.xml
@@ -194,4 +194,7 @@
     <string name="tristate_rotation_0">Màn hình dọc</string>
     <string name="tristate_rotation_90">Ngang (90°)</string>
     <string name="tristate_rotation_270">Ngang (270°)</string>
+    <!-- Screenrecorder -->
+    <string name="screenrecord_stopdot_label">Hiện chấm dừng\nNhấn giữ để di chuyển nó</string>
+    <string name="screenrecord_lowquality_label">Chất lượng thấp cho dung lượng nhỏ hơn</string>
 </resources>
