--- a/packages/SystemUI/res/values-sat-rIN/cr_strings.xml
+++ b/packages/SystemUI/res/values-sat-rIN/cr_strings.xml
@@ -198,4 +198,10 @@
     <!-- Screenrecorder -->
     <string name="screenrecord_stopdot_label">ᱵᱚᱸᱫᱽ ᱰᱚᱴ ᱫᱮᱠᱷᱟᱣ\nᱩᱪᱟᱹᱲ ᱞᱟᱹᱜᱤᱫᱹᱽ ᱡᱩᱨ ᱚᱛᱟᱭ ᱢᱮ</string>
     <string name="screenrecord_lowquality_label">ᱠᱟᱹᱴᱤᱡ ᱨᱮᱫ ᱢᱟᱯ ᱞᱟᱹᱜᱤᱫ ᱠᱚᱢ ᱠᱣᱟᱞᱤᱴᱭ</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">ᱠᱮᱢᱮᱨᱟ</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">ᱡᱟᱭᱜᱟ</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">ᱢᱟᱭᱠᱨᱚᱯᱷᱚᱱ</string>
 </resources>
