--- a/packages/SystemUI/res/values-ar-rSA/cr_strings.xml
+++ b/packages/SystemUI/res/values-ar-rSA/cr_strings.xml
@@ -182,11 +182,11 @@
     <!-- Samsung clock -->
     <!-- Tux clock -->
     <!-- Label for notification action to delete a screen recording file [CHAR LIMIT=35] -->
-    <string name="screenrecord_delete_label">Delete</string>
+    <string name="screenrecord_delete_label">حذف</string>
     <!-- A toast message shown after successfully deleting a screen recording [CHAR LIMIT=NONE] -->
-    <string name="screenrecord_delete_description">Screen recording deleted</string>
+    <string name="screenrecord_delete_description">تم حذف تسجيل الشاشة</string>
     <!-- Alert slide extras -->
-    <string name="volume_ringer_priority_only">Priority</string>
+    <string name="volume_ringer_priority_only">الأولويّة</string>
     <string name="volume_ringer_alarms_only">Alarms</string>
     <string name="volume_ringer_dnd">DnD</string>
     <string name="tristate_flashlight_on">Torch on</string>
@@ -202,4 +202,10 @@
     <!-- Screenrecorder -->
     <string name="screenrecord_stopdot_label">Show stop dot\nLongpress to move it</string>
     <string name="screenrecord_lowquality_label">Lower quality for smaller file size</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">Camera</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">Location</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">Microphone</string>
 </resources>
