--- a/packages/SystemUI/res/values-be-rBY/cr_strings.xml
+++ b/packages/SystemUI/res/values-be-rBY/cr_strings.xml
@@ -198,6 +198,12 @@
     <string name="tristate_rotation_90">Ландшафт (90°)</string>
     <string name="tristate_rotation_270">Ландшафт (270°)</string>
     <!-- Screenrecorder -->
-    <string name="screenrecord_stopdot_label">Show stop dot\nLongpress to move it</string>
-    <string name="screenrecord_lowquality_label">Lower quality for smaller file size</string>
+    <string name="screenrecord_stopdot_label">Паказаць кропку спынення\nНацісніце, каб перамясціць</string>
+    <string name="screenrecord_lowquality_label">Нізкая якасць для меншага памеру файла</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">Камера</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">Месцазнаходжанне</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">Мікрафон</string>
 </resources>
