--- a/packages/SystemUI/res/values-et-rEE/cr_strings.xml
+++ b/packages/SystemUI/res/values-et-rEE/cr_strings.xml
@@ -180,22 +180,28 @@
     <!-- Label for notification action to delete a screen recording file [CHAR LIMIT=35] -->
     <string name="screenrecord_delete_label">Kustuta</string>
     <!-- A toast message shown after successfully deleting a screen recording [CHAR LIMIT=NONE] -->
-    <string name="screenrecord_delete_description">Screen recording deleted</string>
+    <string name="screenrecord_delete_description">Ekraanisalvestus kustutatud</string>
     <!-- Alert slide extras -->
     <string name="volume_ringer_priority_only">Prioriteet</string>
     <string name="volume_ringer_alarms_only">Alarmid</string>
     <string name="volume_ringer_dnd">DnD</string>
     <string name="tristate_flashlight_on">Taskulamp sees</string>
     <string name="tristate_flashlight_off">Taskulamp väljas</string>
-    <string name="tristate_flashlight_blink">Torch blink</string>
-    <string name="tristate_brightness_bright">Max-brightness</string>
-    <string name="tristate_brightness_dark">Min-brightness</string>
-    <string name="tristate_brightness_auto">Auto-brightness</string>
-    <string name="tristate_rotation_auto">Auto-rotate</string>
+    <string name="tristate_flashlight_blink">Taskulamp vilgub</string>
+    <string name="tristate_brightness_bright">Maksimaalne heledus</string>
+    <string name="tristate_brightness_dark">Minimaalne heledus</string>
+    <string name="tristate_brightness_auto">Automaatne heledus</string>
+    <string name="tristate_rotation_auto">Automaatne pööramine</string>
     <string name="tristate_rotation_0">Püstasend</string>
-    <string name="tristate_rotation_90">Landscape (90°)</string>
-    <string name="tristate_rotation_270">Landscape (270°)</string>
+    <string name="tristate_rotation_90">Maastik (90°)</string>
+    <string name="tristate_rotation_270">Maastik (270°)</string>
     <!-- Screenrecorder -->
-    <string name="screenrecord_stopdot_label">Show stop dot\nLongpress to move it</string>
-    <string name="screenrecord_lowquality_label">Lower quality for smaller file size</string>
+    <string name="screenrecord_stopdot_label">Stoppnupu kuvamine\nHoidke liikumiseks</string>
+    <string name="screenrecord_lowquality_label">Madal kvaliteet väiksema failisuuruse jaoks</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">Kaamera</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">Asukoht</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">Mikrofon</string>
 </resources>
