--- a/packages/SystemUI/res/values-fr-rFR/cr_strings.xml
+++ b/packages/SystemUI/res/values-fr-rFR/cr_strings.xml
@@ -198,4 +198,10 @@
     <!-- Screenrecorder -->
     <string name="screenrecord_stopdot_label">Afficher le bouton stop\nAppui long pour le déplacer</string>
     <string name="screenrecord_lowquality_label">Diminuer la qualité de l\'image pour une taille de fichier plus petite</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">Appareil photo</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">Localisation</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">Microphone</string>
 </resources>
