--- a/packages/SystemUI/res/values-hu-rHU/cr_strings.xml
+++ b/packages/SystemUI/res/values-hu-rHU/cr_strings.xml
@@ -198,4 +198,10 @@
     <!-- Screenrecorder -->
     <string name="screenrecord_stopdot_label">Látható megállítógomb\nHosszan nyomva áthelyezhető</string>
     <string name="screenrecord_lowquality_label">Gyengébb minőség, hogy kisebbek legyenek a fájlok</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">Kamera</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">Tartózkodási hely</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">Mikrofon</string>
 </resources>
