--- a/packages/SystemUI/res/values-pl-rPL/cr_strings.xml
+++ b/packages/SystemUI/res/values-pl-rPL/cr_strings.xml
@@ -233,6 +233,12 @@ dziewięć</string>
     <string name="tristate_rotation_90">Poziomo (90°)</string>
     <string name="tristate_rotation_270">Poziomo (270°)</string>
     <!-- Screenrecorder -->
-    <string name="screenrecord_stopdot_label">Show stop dot\nLongpress to move it</string>
-    <string name="screenrecord_lowquality_label">Lower quality for smaller file size</string>
+    <string name="screenrecord_stopdot_label">Pokaż kropkę do zatrzymania\nPrzytrzymaj, aby ją przenieść</string>
+    <string name="screenrecord_lowquality_label">Niższa jakość dla mniejszego rozmiaru pliku</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">Aparat</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">Lokalizacja</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">Mikrofon</string>
 </resources>
