--- a/packages/SystemUI/res/values-pt-rBR/cr_strings.xml
+++ b/packages/SystemUI/res/values-pt-rBR/cr_strings.xml
@@ -198,4 +198,10 @@
     <!-- Screenrecorder -->
     <string name="screenrecord_stopdot_label">Mostrar ponto de parada\nPressione longamente para movê-lo</string>
     <string name="screenrecord_lowquality_label">Qualidade inferior para arquivos menores</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">Câmera</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">Localização</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">Microfone</string>
 </resources>
