--- a/packages/SystemUI/res/values-ro-rRO/cr_strings.xml
+++ b/packages/SystemUI/res/values-ro-rRO/cr_strings.xml
@@ -199,4 +199,10 @@
     <!-- Screenrecorder -->
     <string name="screenrecord_stopdot_label">Arată punctul stop\nApăsați lung pentru a-l muta</string>
     <string name="screenrecord_lowquality_label">Calitate scăzută pentru dimensiunea mai mică a fișierului</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">Cameră</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">Locaţie</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">Microfon</string>
 </resources>
