--- a/packages/SystemUI/res/values-zh-rCN/cr_strings.xml
+++ b/packages/SystemUI/res/values-zh-rCN/cr_strings.xml
@@ -195,6 +195,12 @@
     <string name="tristate_rotation_90">横向 (90°)</string>
     <string name="tristate_rotation_270">横向 (270°)</string>
     <!-- Screenrecorder -->
-    <string name="screenrecord_stopdot_label">Show stop dot\nLongpress to move it</string>
-    <string name="screenrecord_lowquality_label">Lower quality for smaller file size</string>
+    <string name="screenrecord_stopdot_label">显示停止点\n长按移动它</string>
+    <string name="screenrecord_lowquality_label">较低画质以求更小的文件大小</string>
+    <!-- Name of the camera status bar icon. -->
+    <string name="status_bar_camera">相机</string>
+    <!-- Name of the location status bar icon. -->
+    <string name="status_bar_location">位置</string>
+    <!-- Name of the microphone status bar icon. -->
+    <string name="status_bar_microphone">麦克风</string>
 </resources>
