Adapt tuner prefs to S settings style & cleanup
Co-authored-by: Michael Bestas <mkbestas@lineageos.org>
Change-Id: Icadd13a00e4d3e649b50f405ed0c8c76081be200

--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -109,4 +109,7 @@
     <!-- Name of the firewall status bar icon. -->
     <string name="status_bar_firewall">Firewall</string>
     <string name="status_bar_firewall_slot" translatable="false">firewall</string>
+
+    <!-- Status bar - icons -->
+    <string name="status_bar_icons_title">Status bar icons</string>
 </resources>
