Revert "Rework "SystemUI: Turn less boring headsup whitelist into an overlay""
This reverts commit 3987074f202ccd011f7902579ebe26e241842439.

--- a/packages/SystemUI/res/values/cr_config.xml
+++ b/packages/SystemUI/res/values/cr_config.xml
@@ -92,9 +92,8 @@
     <!-- Preferred max refresh rate at AOD & Ambient Display, if supported by the display. -->
     <integer name="config_aodMaxRefreshRate">-1</integer>
 
-    <!-- The list of packages that are allowed to show headsup when using
-         Boring headsup mode -->
-    <string-array name="config_boringHeadsUpPackageAllowList">
+    <!-- Boring headsup whitelist -->
+    <string-array name="heads_up_whitelist_packages">
         <item>com.android.dialer</item>
         <item>com.google.android.dialer</item>
         <item>com.google.android.apps.messaging</item>
@@ -104,4 +103,5 @@
         <item>messenger</item>
         <item>clock</item>
     </string-array>
+
 </resources>
